// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<h1>
  Viewing 
  1
   
  expense
   totalling 
  $3.20
</h1>
`;

exports[`should correctly render ExpenseSummary with multiple expenses 1`] = `
<h1>
  Viewing 
  2
   
  expenses
   totalling 
  $2.00
</h1>
`;
